# interactivedatascience

./: LICENSE.md
tutorial2/: main.py  pyproject.toml
tutorial3/: pyproject.toml
tutorial3/src/tutorial3/: __init__.py  ball.py  screen.py
tutorial4/: pyproject.toml
tutorial4/src/tutorial4/: __init__.py  arc.py  curve.py  ellipse.py  line.py  rectangle.py  screen.py  shape.py
tutorial5/: context.py  fill_transparency_stroke.py  pyproject.toml
tutorial6/src/tutorial6/: __init__.py  transform.py
