[project]
name = "tutorial3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt Fisher", email = "mfisher87@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "sketchingpy[desktopall]>=0.3.1",
]

[project.scripts]
tutorial3 = "tutorial3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
